--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,6 @@
         continue.</strong
       >
     </noscript>
-    <div id="app" class="bg-gray-900 text-white"></div>
+    <div id="app" class="bg-gray-900 text-white min-h-full"></div>
   </body>
 </html>
